--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -30,14 +30,16 @@ body:
       description: |
         At least one URL for a web page where the clearly described issue occurs is **mandatory**. 
         The backticks surrounding the URLs is important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
-      value: \`\`
+      value: |
+        \`\`
     validations:
       required: true
 
   - type: textarea
     attributes:
       label: Describe the issue
-      description: Be as clear as possible: nobody can read mind, and nobody is looking at your issue over your shoulder.
+      description: |
+        Be as clear as possible: nobody can read mind, and nobody is looking at your issue over your shoulder.
     validations:
       required: true
 
