--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -68,7 +68,8 @@ body:
     attributes:
       label: Settings
       description: List all the changes you made to uBO's default settings here
-      value: -
+      value: |
+        -
     validations:
       required: true  
 
