--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -31,7 +31,7 @@ body:
         At least one URL for a web page where the clearly described issue occurs is **mandatory**. 
         The backticks surrounding the URLs is important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
       value: |
-        \`\`
+        `url`
     validations:
       required: true
 
@@ -47,8 +47,8 @@ body:
     attributes:
       label: Screenshot(s)
       description: |
-        Screenshot(s) for difficult to describe visual issues are **mandatory**. 
-        Post links instead of **Inline Images** for Screenshots containing **Adult material**.
+        Screenshot(s) for **difficult to describe visual issues are mandatory**. 
+        Post **links** instead of inline images for screenshots containing **adult material**.
     validations:
       required: false
 
@@ -69,7 +69,7 @@ body:
       label: Settings
       description: List all the changes you made to uBO's default settings here
       value: |
-        -
+        - 
     validations:
       required: true  
 
