--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -30,8 +30,10 @@ body:
       description: |
         At least one URL for a web page where the clearly described issue occurs is **mandatory**. 
         The backticks surrounding the URLs is important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
-      value: |
-        `url`
+      placeholder: |
+        `https://example.com`
+        `https://example.org`
+        `https://example.net`
     validations:
       required: true
 
@@ -68,8 +70,10 @@ body:
     attributes:
       label: Settings
       description: List all the changes you made to uBO's default settings here
-      value: |
-        - 
+      placeholder: |
+        - Change 1
+        - Change 2
+        - Change 3
     validations:
       required: true  
 
