--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -29,7 +29,7 @@ body:
       label: URL(s) where the issue occurs
       description: |
         At least one URL for a web page where the clearly described issue occurs is **mandatory**. 
-        The backticks surrounding the URLs is important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
+        The backticks (`) surrounding the URLs are important, it prevents the URL from being clickable. Warn with "NSFW" where applicable.
       placeholder: |
         `https://example.com`
         `https://example.org`
@@ -81,7 +81,8 @@ body:
     attributes:
       label: Notes
       description: |
-        Add here the result of whatever investigation work you have done: please investigate the issues you report -- this prevents burdening other volunteers. 
+        Please investigate the issues you report -- this prevents burdening other volunteers. 
         This is especially true for issues arising from settings which are very different from default ones.
+      placeholder: Add here the result of whatever investigation work you have done
     validations:
       required: true
