--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -83,6 +83,6 @@ body:
       description: |
         Please investigate the issues you report -- this prevents burdening other volunteers. 
         This is especially true for issues arising from settings which are very different from default ones.
-      placeholder: Add here the result of whatever investigation work you have done
+      placeholder: Write here the result of whatever investigation work you have done
     validations:
       required: true
