--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -75,7 +75,7 @@ body:
         - Change 2
         - Change 3
     validations:
-      required: true  
+      required: false  
 
   - type: textarea
     attributes:
@@ -85,4 +85,4 @@ body:
         This is especially true for issues arising from settings which are very different from default ones.
       placeholder: Write here the result of whatever investigation work you have done
     validations:
-      required: true
+      required: false
