Made settings mandatory

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -75,7 +75,7 @@ body:
         - Change 2
         - Change 3
     validations:
-      required: false  
+      required: true  
 
   - type: textarea
     attributes:
