--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -69,7 +69,7 @@ body:
   - type: textarea
     attributes:
       label: Settings
-      description: List all the changes you made to uBO's default settings here
+      description: List all the changes you've made to uBO's default settings here
       placeholder: |
         - Change 1
         - Change 2
