Exclude all content blockers

--- a/.github/ISSUE_TEMPLATE/specific_report_from_ubo.yml
+++ b/.github/ISSUE_TEMPLATE/specific_report_from_ubo.yml
@@ -22,7 +22,7 @@ body:
           required: true
         - label: I do not have custom filters/rules, or I have verified that the issue still occurs without custom filters/rules.
           required: true
-        - label: I am not using uBlock Origin (uBO) along with other [similarly-purposed blockers](https://twitter.com/gorhill/status/1033706103782170625).
+        - label: I am not using uBlock Origin (uBO) along with other content blocker extensions
           required: true
         - label: I have verified that the web browser's built-in blocker or [DNS blocking](https://en.wikipedia.org/wiki/DNS_blocking) (standalone or through a VPN) is not causing the issue.
           required: true
