--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
           TMPDIR=$(mktemp -d)
           git clone --depth=1 https://github.com/uBlockOrigin/uAssets.git $TMPDIR
           cp $TMPDIR/filters/*.txt filters/
-          cp $TMPDIR/thirdparties/easylist-downloads.adblockplus.org/easylist.txt thirdparties/
-          cp $TMPDIR/thirdparties/easylist-downloads.adblockplus.org/easyprivacy.txt thirdparties/
+          cp $TMPDIR/thirdparties/easylist/easylist.txt thirdparties/
+          cp $TMPDIR/thirdparties/easylist/easyprivacy.txt thirdparties/
       - name: Patch last-updated field
         run: |
           DATE=$(date -Ru)
