Add ability to stitch together filters- and privacy-related lists
This should help reduce the number of requests to the servers
hosting the filter lists.

When all changes are propagated to all CDN servers,
resource-abuse.txt can be removed from stock lists in uBO,
as it will be stitched together with privacy.txt into
privacy-all.txt list.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,9 @@ jobs:
         run: |
           TMPDIR=$(mktemp -d)
           git clone --depth=1 https://github.com/uBlockOrigin/uAssets.git $TMPDIR
+          pushd $TMPDIR > /dev/null
+          ./tools/make-ublock.sh
+          popd > /dev/null
           cp $TMPDIR/filters/*.txt filters/
           cp $TMPDIR/thirdparties/easylist/easy*.txt thirdparties/
       - name: Patch last-updated field
