Add more spin-offs of Fanboy Annoyances

--- a/templates/easylist-notifications.template
+++ b/templates/easylist-notifications.template
@@ -1,22 +1,22 @@
 [Adblock Plus 2.0]
-! Title: EasyList – Annoyances
+! Title: EasyList – Notifications
 ! Last modified: %timestamp%
 ! Expires: 7 days (update frequency)
 %include easylist:template_header.txt%
 !
 !--------------------------General blocking rules-----------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_general_block.txt%
+%include easylist:fanboy-addon/fanboy_notifications_general_block.txt%
 !------------------------General element hiding rules-------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_general_hide.txt%
+%include easylist:fanboy-addon/fanboy_notifications_general_hide.txt%
 !-------------------------Third-party blocking rules--------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_thirdparty.txt%
+%include easylist:fanboy-addon/fanboy_notifications_thirdparty.txt%
+%include easylist:fanboy-addon/fanboy_sounds_thirdparty.txt%
 !--------------------------Specific blocking filters--------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_specific_block.txt%
+%include easylist:fanboy-addon/fanboy_notifications_specific_block.txt%
 !------------------------Specific element hiding rules------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_specific_hide.txt%
-%include easylist:fanboy-addon/fanboy_annoyance_specific_uBO.txt%
+%include easylist:fanboy-addon/fanboy_notifications_specific_hide.txt%
+%include easylist:fanboy-addon/fanboy_notifications_specific_uBO.txt%
 !------------------------Rules for international sites------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_international.txt%
 !---------------------------------Allowlists----------------------------------!
-%include easylist:fanboy-addon/fanboy_annoyance_allowlist.txt%
-%include easylist:fanboy-addon/fanboy_annoyance_allowlist_general_hide.txt%
+%include easylist:fanboy-addon/fanboy_notifications_allowlist.txt%
+%include easylist:fanboy-addon/fanboy_notifications_allowlist_general_hide.txt%
