--- a/templates/easylist-social.template
+++ b/templates/easylist-social.template
@@ -1,5 +1,5 @@
 [Adblock Plus 2.0]
-! Title: EasyList Social
+! Title: EasyList – Social Widgets
 ! Last modified: %timestamp%
 ! Expires: 7 days (update frequency)
 %include easylist:template_header.txt%
