--- a/templates/ublock-filters.template
+++ b/templates/ublock-filters.template
@@ -1,4 +1,4 @@
-! Title: uBlock₀ filters
+! Title: uBlock filters
 ! Description: Filters optimized for uBlock, to be used along EasyList
 ! Expires: 5 days
 ! Last modified: %timestamp%
