--- a/templates/ublock-privacy.template
+++ b/templates/ublock-privacy.template
@@ -1,4 +1,4 @@
-! Title: uBlock₀ filters – Privacy
+! Title: uBlock filters – Privacy
 ! Description: |
 !   Some of these filters make use of the `important` filter option,
 !   which purpose is to guarantee that a filter won't be overriden by
