--- a/templates/easylist-cookies.template
+++ b/templates/easylist-cookies.template
@@ -1,5 +1,5 @@
 [Adblock Plus 2.0]
-! Title: EasyList Cookies
+! Title: EasyList – Cookie Notices
 ! Last modified: %timestamp%
 ! Expires: 7 days (update frequency)
 %include easylist:template_header.txt%
