--- a/templates/easylist-chat.template
+++ b/templates/easylist-chat.template
@@ -1,5 +1,5 @@
 [Adblock Plus 2.0]
-! Title: EasyList – Anti-Chat
+! Title: EasyList – Chat Widgets
 ! Last modified: %timestamp%
 %include easylist:template_header.txt%
 !
