Adding Easylist Newsletter Shopping site category
Categories listed here: https://github.com/easylist/easylist/tree/master/fanboy-addon

--- a/templates/easylist-newsletters.template
+++ b/templates/easylist-newsletters.template
@@ -12,12 +12,17 @@
 %include easylist:fanboy-addon/fanboy_newsletter_thirdparty.txt%
 !--------------------------Specific blocking filters--------------------------!
 %include easylist:fanboy-addon/fanboy_newsletter_specific_block.txt%
+%include easylist:fanboy-addon/fanboy_newsletter_shopping_specific_block.txt%
 !------------------------Specific element hiding rules------------------------!
 %include easylist:fanboy-addon/fanboy_newsletter_specific_hide.txt%
 %include easylist:fanboy-addon/fanboy_newsletter_specific_uBO.txt%
+%include easylist:fanboy-addon/fanboy_newsletter_shopping_specific_uBO.txt%
+%include easylist:fanboy-addon/fanboy_newsletter_shopping_specific_hide.txt%
 !------------------------Rules for international sites------------------------!
 %include easylist:fanboy-addon/fanboy_newsletter_international_block.txt%
 %include easylist:fanboy-addon/fanboy_newsletter_international_hide.txt%
 !---------------------------------Allowlists----------------------------------!
 %include easylist:fanboy-addon/fanboy_newsletter_allowlist.txt%
 %include easylist:fanboy-addon/fanboy_newsletter_allowlist_general_hide.txt%
+%include easylist:fanboy-addon/fanboy_newsletter_shopping_allowlist.txt%
+%include easylist:fanboy-addon/fanboy_newsletter_shopping_allowlist_general_hide.txt%
